applications/shared-resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
spec:
  rules:
  - http:
      paths:
      - path: /daycare-app
        pathType: Prefix
        backend:
          service:
            name: daycare-app-service
            port:
              number: 80

      - path: /nursinghome-app
        pathType: Prefix
        backend:
          service:
            name: nursinghome-app-service
            port:
              number: 80

      - path: /fashion-store
        pathType: Prefix
        backend:
          service:
            name: fashion-store-service
            port:
              number: 80
